--- a/one_video.html
+++ b/one_video.html
@@ -27,15 +27,15 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-blue" style="background-color: black; color: cornflowerblue;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="coursa.courses" style="color:deeppink;">COURSA</a>
+        <a class="navbar-brand" href="index.html" style="color:deeppink;">COURSA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="coursa.courses" style="color:rgb(43, 206, 255);">Home</a>
-            <a class="nav-link" href="https://one-video-tutorials.vikask001.repl.co/" style="color:rgb(161, 36, 19);">One Video Tutorials</a>
+            <a class="nav-link active" aria-current="page" href="index.html" style="color:rgb(43, 206, 255);">Home</a>
+            <a class="nav-link" href="#" style="color:rgb(161, 36, 19);">One Video Tutorials</a>
             <a class="nav-link" href="https://github.com/vikask1/Coursa" style="color:rgb(20, 255, 32);">Contribute</a>
           </div>
         </div>
@@ -313,7 +313,7 @@
 
     <br>
     <br>
-    <h6 style="color: white;">Coursa © 2020 - The Official Course Recommender Platform</h6>
+    <h6 style="color: white;">Coursa © 2020 - The Official Course Recommending Platform</h6>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
