--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-blue" style="background-color: black; color: cornflowerblue;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="coursa.courses" style="color:deeppink;">COURSA</a>
+      <a class="navbar-brand" href="#" style="color:deeppink;">COURSA</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="coursa.courses"
+          <a class="nav-link active" aria-current="page" href="#"
             style="color:rgb(161, 36, 19);">Home</a>
-          <a class="nav-link" href="https://one-video-tutorials.vikask001.repl.co/" style="color:rgb(20, 255, 224);">One Video Tutorials</a>
-          <a class="nav-link" href="https://github.com/vikask1/Coursa" style="color:rgb(20, 255, 32);">Contribute</a>
+          <a class="nav-link" href="one_video.html" style="color:rgb(20, 255, 224);">One Video Tutorials</a>
+          <a class="nav-link" href="https://github.com/vikask1/Coursa" style="color:rgb(20, 255, 32);" target="_blank">Contribute</a>
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
           <h5 class="card-title"> No Sign-up or Login Required</h5>
           <p class="card-text">Get started with learning your favourite programming languages without wasting your
             precious time in sign-up or login.</p>
-          <a href="https://one-video-tutorials.vikask001.repl.co/" class="btn btn-primary">Get Started</a>
+          <a href="one_video.html" class="btn btn-primary">Get Started</a>
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
           <h5 class="card-title">Free Of Cost</h5>
           <p class="card-text">No need to spend a single penny to learn as we have selected all the courses from
             youtube.</p>
-          <a href="https://one-video-tutorials.vikask001.repl.co/" class="btn btn-primary">Learn Now</a>
+          <a href="one_video.html" class="btn btn-primary">Learn Now</a>
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
         <div class="card-body">
           <h5 class="card-title">One Video Tutorials</h5>
           <p class="card-text">Start learning from the best one video tutorial recommended by us.</p>
-          <a href="https://one-video-tutorials.vikask001.repl.co/" class="btn btn-primary">Get Started</a>
+          <a href="one_video.html" class="btn btn-primary">Get Started</a>
         </div>
       </div>
     </div>
@@ -123,7 +123,7 @@
           <h5 class="card-title">Open Source</h5>
           <p class="card-text">This website is "Open Source", this means anyone can contribute to this website by
             visiting us on GitHub.</p>
-          <a href="https://github.com/vikask1/Coursa" class="btn btn-primary">Contribute</a>
+          <a href="https://github.com/vikask1/Coursa" class="btn btn-primary" target="_blank">Contribute</a>
         </div>
       </div>
     </div>
@@ -138,19 +138,19 @@
   <h2 align="center" style="color: white;">Follow us</h2>
   <br>
   <br>
-  <div class="o" align="center"><a href="https://twitter.com/VikasKa98450152"><img src="twitterlogo.jpg"
+  <div class="o" align="center"><a href="https://twitter.com/VikasKa98450152" target="_blank"><img src="twitterlogo.jpg"
         alt="twitter logo" height="75" width="75"></a></div>
   <br>
-  <div class="o" align="center"><a href="https://github.com/vikask1"><img src="githublogo.jpg" alt="github logo"
+  <div class="o" align="center"><a href="https://github.com/vikask1" target="_blank"><img src="githublogo.jpg" alt="github logo"
         height="75" width="75"></a></div>
   <br>
 
-  <div class="o" align="center"><a href="https://www.youtube.com/channel/UCjbrUPYn0rRfXXPK8ObMe6g"><img
+  <div class="o" align="center"><a href="https://www.youtube.com/channel/UCjbrUPYn0rRfXXPK8ObMe6g" target="_blank"><img
         src="youtube_logo.jpg" alt="youtube logo" height="75" width="75"></a></div>
   <br>
   <hr>
 
-  <h6 style="color: white;">Coursa © 2020 - The Official Course Recommender Platform</h6>
+  <h6 style="color: white;">Coursa © 2020 - The Official Course Recommending Platform</h6>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
